Added @Reflectable to DocumentArtifact